# daily-video-pipeline

./: .env.example  .gitignore  LICENSE  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: commercial.example.yml  motion-overrides.example.yml  project.example.yml
docs/: architecture.md  cli_user_smoke_test.md  gallery.html  gallery.md  privacy.md  production_principles.md  template_system.md
examples/: demo_items.json
scripts/: privacy_scan.py  pronunciation_scan.py
skills/daily-video-pipeline/: SKILL.md
skills/daily-video-pipeline/agents/: openai.yaml
skills/daily-video-pipeline/references/: conversation-guide.md  design-guide.md  repo-operation.md
src/daily_video_pipeline/: __init__.py  cli.py  config.py  fetchers.py  gallery.py  models.py  pipeline.py  privacy.py  pronunciation.py  renderer.py  review.py  script_writer.py  selection.py  setup_tools.py  templates.py  timing.py
tests/: test_gallery.py  test_pipeline.py  test_privacy.py  test_pronunciation.py  test_renderer.py  test_review.py  test_selection.py  test_setup_tools.py  test_templates.py  test_timing.py
